# vanity-eth-rust

./: Cargo.toml  README.md
src/: main.rs
