[package]
name = "eth-key-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.27.0", features = ["rand"] }
rand = "0.8.5"
hex = "0.4.3"
sha3 = "0.10.8"
ethereum-types = "0.14.1"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1.16" 